--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,5 +33,5 @@ networks:
     ipam:
       config:
         - subnet: 10.10.10.0/24
-          gateway: 10.10.10.1
-          ip_range: 10.10.10.48/28
+        - gateway: 10.10.10.1
+        - ip_range: 10.10.10.48/28
