man network create

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         cap_add:
             - NET_ADMIN
         networks:
-          macvlan_network:
+          test:
             ipv4_address: 10.10.10.50  #ip of your adguard container. I choose 192.168.1.8/29 subnet for my macvlans
         dns:
             - 10.10.10.1
@@ -25,13 +25,13 @@ services:
         restart: unless-stopped
     
 networks:
-  macvlan_network:
-    driver: macvlan
-    enable_ipv6: false
-    driver_opts:
-      parent: ens192
-    ipam:
-      config:
-        - subnet: 10.10.10.0/24
-        - gateway: 10.10.10.1
+  test:
+#    driver: macvlan
+#    enable_ipv6: false
+#    driver_opts:
+#      parent: ens192
+#    ipam:
+#      config:
+#        - subnet: 10.10.10.0/24
+#        - gateway: 10.10.10.1
 #        - ip_range: 10.10.10.48/29
