--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,15 @@ services:
             - adguard-macvlan
 #          macvlan_network:
 #            ipv4_address: 10.10.10.50  #ip of your adguard container. I choose 192.168.1.8/29 subnet for my macvlans
+        ports:
+            - 53:53/tcp
+            - 53:53/udp
+            - 67:67/udp
+            - 68:68/udp
+            - 68:68/tcp
+            - 3000:3000/tcp
+            - 80:80/tcp
+            - 443:443/tcp
         dns:
             - 10.10.10.1
             - 1.1.1.1
