--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         cap_add:
             - NET_ADMIN
         networks:
-          macvlan_network:
+          ipvlan_net:
             ipv4_address: 10.10.10.50  #ip of your adguard container. I choose 192.168.1.8/29 subnet for my macvlans
         ports:
             - 53:53/tcp
@@ -62,7 +62,9 @@ services:
 #        network_mode: host
 #        networks:
 #            - private
-    
+networks:
+  ipvlan_net:
+    external: true    
 networks:
   macvlan_network:
     driver: macvlan
