--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,8 @@ services:
             - NET_ADMIN
         restart: always
         networks:
-          macvlan_network:
+          ipvlan_net:
+           # macvlan_network:
             ipv4_address: 10.10.10.51
 #        network_mode: host
 #        networks:
@@ -65,14 +66,14 @@ services:
 networks:
   ipvlan_net:
     external: true    
-networks:
-  macvlan_network:
-    driver: macvlan
-    enable_ipv6: false
-    driver_opts:
-      parent: ens192
-    ipam:
-      config:
-        - subnet: 10.10.10.0/24
-          gateway: 10.10.10.1
-          ip_range: 10.10.10.48/28
+# networks:
+#   macvlan_network:
+#     driver: macvlan
+#     enable_ipv6: false
+#     driver_opts:
+#       parent: ens192
+#     ipam:
+#       config:
+#         - subnet: 10.10.10.0/24
+#           gateway: 10.10.10.1
+#           ip_range: 10.10.10.48/28
